# universal-llm-safeguard

./: .gitignore  CurrentStatus_GPTAudit.mb  LICENSE  README.md  pyproject.toml  run_microservice.py
api/: api_service.py
core/: classifier_filter.py  keyword_filter.py  models.py  orchestrator.py  perspective_api_filter.py
docs/: DocStatus_GPTAudit.mb  README.md  To-Do's.md
docs/blueprints/.trinity_docs/: PROJECT_SEED.md
docs/config/: safeguard_config.json
docs/core/: keyword_filter.py  orchestrator.py  perspective_api_filter.py  regex_filter.py
examples/: streamlit_example.py
filters/: pipeline.py
middleware/: __init__.py  django_adapter.py  fastapi_adapter.py  flask_adapter.py
safeguarding/config/: safeguard_config.json
safeguarding/core/: classifier_filter.py  keyword_filter.py  orchestrator.py
safeguarding/docs/: CurrentStatus_GPTAudit - v2.mb  filetree.txt
safeguarding/docs/blueprints/: File Tree and Module Stub Blueprint.txt  Safeguard_OS.md
safeguarding/docs/blueprints/.trinity_docs/: safeguard_manifesto.md  safeguard_plan.md
safeguarding/examples/: fastapi_example.py
safeguarding/hooks/: post_process_hook.py  pre_process_hook.py
safeguarding/middleware/: base.py  fastapi_adapter.py  flask_adapter.py
safeguarding/tests/: integration_test_adapter.py  test_filters.py
safeguarding/utils/: config_loader.py  override_checker.py
tests/: test_admin_override.py  test_filters.py
utils/: anonymizer.py  config_loader.py  logger.py  override_checker.py
