[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-llm-safeguard"
version = "0.1.0"
description = "Universal middleware for safeguarding AI-generated content"
authors = [
  { name = "Julius Deane", email = "founder.haail@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "fastapi>=0.95.0",
  "transformers>=4.30.0",
  "requests>=2.25.0",
  "torch"
]

[project.optional-dependencies]
flask = [
  "flask>=2.0.0"
]
django = [
  "django>=3.2"
]
streamlit = [
  "streamlit"
]
dev = [
  "pytest",
  "httpx",
  "uvicorn[standard]",
  "black",
  "isort"
]
